fill html with some data

--- a/5/5.html
+++ b/5/5.html
@@ -11,14 +11,70 @@
 		</div>
 		<div class="header_menu">
 			<ul class="menu">
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
+				<li><a href="#">Menu</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Product</a></li>
+				<li><a href="#">Contacts</a></li>
+				<li><a href="#">Links</a></li>
 			</ul>
 		</div>
+		<div class="slider">
+			<a href="#"><img src="img/slider.png"></a>
+		</div>
+		<div class="content">
+			<div class="top_content">
+				<div class="article">
+					<img src="img/settings.png" alt="">
+					<h3>About our company</h3>
+					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.</p>
+					<a href="#">Read More</a>
+				</div>
+				<div class="article">
+					<img src="img/settings.png" alt="">
+					<h3>About our company</h3>
+					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.</p>
+					<a href="#">Read More</a>
+				</div>
+				<div class="article">
+					<img src="img/settings.png" alt="">
+					<h3>About our company</h3>
+					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.</p>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+			<div class="bottom_content">
+				<div class="slider_article">
+					<img src="img/man.png">
+					<h3>PingbulLer starts here</h3>
+					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque</p>
+				</div>
+				<img src="img/slider_article.png">
+				<div class="recents">
+					<h3></h3>
+					<div class="update">
+						<img src="img/upimg.png">
+						<span></span>
+						<span></span>
+					</div>
+					<div class="update">
+						<img src="img/upimg.png">
+						<span></span>
+						<span></span>
+					</div>
+					<div class="update">
+						<img src="img/upimg.png">
+						<span></span>
+						<span></span>
+					</div>
+					<a href="#"></a>
+				</div>
+				<div class="brands"><img src="img/brands.png"></div>
+			</div>
+		</div>
+		<footer>
+			<span>Designed by Pingbull AS</span>
+		</footer>
 	</header>
 </body>
 </html>
